--- a/startup-matchmaker/starter_code/index.html
+++ b/startup-matchmaker/starter_code/index.html
@@ -1,4 +1,4 @@
-<!-- 	<!doctype html> -->
+<!doctype html>
 <html lang="en-us">
 <head>
 	<meta charset="utf-8">
@@ -62,6 +62,8 @@
 			</div>
 		</footer>
 	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </body>
 </html>
+
 v
