--- a/startup-matchmaker/starter_code/index.html
+++ b/startup-matchmaker/starter_code/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Startup Matchmaker</title>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
+	<link href='css/default.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="container">
