--- a/startup-matchmaker/starter_code/index.html
+++ b/startup-matchmaker/starter_code/index.html
@@ -5,11 +5,11 @@
 	<title>Startup Matchmaker</title>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
 	<link href='css/default.css' rel='stylesheet' type='text/css'>
+	<link href="css/styles.css" rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="container">
 		<header id="page-header">
-			<div class="wrapper">
 				<h1><a href="index.html">Startup Matchmaker</a></h1>
 				<nav>
 					<ul>
@@ -20,19 +20,15 @@
 						<li><a href="#">Blog</a></li>
 					</ul>
 				</nav>
-			</div>
 		</header>
 		<p class="tagline">Because two brains <del>taste</del> <ins>are</ins> better than&nbsp;one.</p>
 		<section class="banner">
-			<div class="wrapper">
 				<div class="blurb">
 					<h2>Meet your Match!</h2>
 					<p>Have a great idea for a product, but need help making it a reality? We’re here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
 					<a class="button" href="#">Create a Profile</a>
 				</div>
-			</div>
 		</section>
-		<div class="wrapper">
 			<section class="touts">
 				<section class="tout">
 					<header>
@@ -56,7 +52,6 @@
 					<a class="button" href="designers.html">Start Your Search</a>
 				</section>
 			</section>
-		</div>
 		<footer>
 			<div class="wrapper">
 				© 2013 Startup Matchmaker. Made in NY.
